--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "brunch": "^2.4.0",
     "clean-css-brunch": "^2.0.0",
     "css-brunch": "^2.0.0",
+    "fancybox": "^3.0.0",
     "javascript-brunch": "^2.0.0",
     "uglify-js-brunch": "^2.0.0"
   }
