--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "autoprefixer": "^6.3.4",
     "fullpage.js": "^2.9.4",
+    "html2canvas": "^0.5.0-beta4",
     "jaded-brunch": "^2.2.3",
     "jquery": "^2.2.2",
     "jquery-validation": "^1.17.0",
